<resources>
    <string name="app_name">Visualizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_item_2d">2D View</string>
    <string name="menu_item_3d">3D View</string>
    <string name="menu_item_ar">AR View</string>
    <string name="menu_item_setup">Setup</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="failure_string">FAILURE</string>
    <string name="fragment_main">Welcome! \n\n Use the navigation drawer to view different perspectives of the disaster area. \n\n Use the floating action button to broadcast your location if you find a survivor.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_title">Loading Data</string>
    <string name="loading_please_wait">Loading... Please wait</string>
    <string name="title_activity_setup">Connect To a Server</string>
    <string name="prompt_email">Operation Name</string>
    <string name="prompt_password">Access PIN</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Connect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="alert_server">"Broadcasting your position."</string>
    <string name="height">"Height"</string>
    <string name="setup_message">Setup: Please enter the following information to connect to a server</string>
    <string name="operation_name">Operation Name:</string>
    <string name="server_web_address">Server Web Address:</string>
    <string name="server_pin">Server PIN:</string>
    <string name="http">http://</string>
    <string name="reset_configuration">Reset Configuration</string>
    <string name="about_text">Survivor Location Visualizer\nSenior Capstone Project\nCameron Stinson\nClass of 2016</string>
    <string name="signal">Signal</string>
    <string name="tilt_help">Slide with two fingers to adjust the tilt</string>
    <string name="network_error">Network Error \n No response from server</string>

</resources>
