<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Views">
        <menu>
        <item
            android:id="@+id/nav_2dview"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_item_2d" />
        <item
            android:id="@+id/nav_3dview"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/menu_item_3d" />
        <!--<item
            android:id="@+id/nav_arview"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_item_ar" />-->
        </menu>
    </item>
    <item android:title="Utility">
        <menu>
            <item
                android:id="@+id/nav_setup"
                android:icon="@drawable/ic_phonelink_setup_black_24dp"
                android:title="@string/menu_item_setup" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_item_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_item_about" />
        </menu>
    </item>

</menu>
